fixed contact scale to be lower as it was causing a double scroll bar

--- a/styles/main-style.scss
+++ b/styles/main-style.scss
@@ -466,7 +466,7 @@ html {
             margin: 1em 0;
         }
         form {
-            transform: scale(2);
+            transform: scale(1.5);
             opacity: 0;
             display: flex;
             flex-direction: column;
@@ -1053,7 +1053,7 @@ html {
             margin: 1em 0;
         }
         form {
-            transform: scale(2);
+            transform: scale(1.5);
             opacity: 0;
             display: flex;
             flex-direction: column;
@@ -1183,7 +1183,6 @@ html {
         margin: 1em 0;
     }
 }
-
 // Small Sized Screens
 @media all and (max-width: 640px) {
     * {
@@ -1645,6 +1644,8 @@ html {
         min-height: 630px;
         width: 100%;
         display: flex;
+        opacity: 0;
+        transform: scale(1.5);
         flex-direction: column;
         align-items: center;
 
